tests/TypingSpec/valid/prog/lin-data-bind.algst
data D : TL = D

foo : D -> ()
foo x =
  case x of {
    D -> ()
  }
