tests/TypingSpec/invalid/types/case-empty.algst
\(n : Int) -> case n of {}
